<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_title_label"/>

    <EditText
        android:id="@+id/smart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smart_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_specific_label"/>

    <EditText
        android:id="@+id/smart_specific"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smart_specific_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_measurable_label"/>

    <EditText
        android:id="@+id/smart_measuarable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smart_measurable_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_attainable_label"/>

    <EditText
        android:id="@+id/smart_attainable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smart_attainable_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_relevant_label"/>

    <EditText
        android:id="@+id/smart_relevant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smart_relevant_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/smart_date_hint"/>

    <Button
        android:id="@+id/smart_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/smart_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/smart_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_completed_label"/>

    <Button
        android:id="@+id/smart_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_gallery_text"/>

    <Button
        android:id="@+id/smart_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_summary_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/take_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/smart_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

</LinearLayout></ScrollView>